[tool.poetry]
name = "env-time-converter"
version = "0.1.0"
description = "Easily convert differt time-range format to standard ones"
authors = ["Massimiliano Ceriani <massimiliano.ceriani08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
flake8 = "^3.7"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
